# nocrush

./: CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  example.noo  interpreter.py  noocrush.py  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
benchmarks/: benchmark.py
docker/: Dockerfile.docs
docs/: conf.py  index.rst
nocrush/: __init__.py  __main__.py  interpreter.py  lexer.py  parser.py
nocrush/ast/: __init__.py
nocrush/cli/: __init__.py
nocrush/core/ast/: nodes.py
nocrush/core/interpreter/: builtins.py  environment.py  error.py  interpreter.py  utils.py
nocrush/core/lexer/: lexer.py  tokens.py
nocrush/errors/: __init__.py
nocrush/examples/: features.noo  hello_world.noo
nocrush/stdlib/: __init__.py
nocrush/types/: __init__.py
nocrush/utils/: __init__.py
scripts/: create_structure.py  setup_dev.py
tests/: conftest.py  test_interpreter.py  test_lexer.py  test_parser.py  test_stdlib.py
