[metadata]
description-file = README.md
license_files = LICENSE

[flake8]
max-line-length = 100
exclude = .git,__pycache__,.tox,*.egg-info,build,dist,docs
per-file-ignores =
    # Allow non-abstract empty methods in abstract base classes
    */__init__.py: D104
    # Allow non-abstract empty methods in abstract base classes
    */tests/*.py: S101

[isort]
profile = black
line_length = 100
skip = .git,__pycache__,.tox,*.egg-info,build,dist,docs

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True

[coverage:run]
source = noocrush
omit = 
    */tests/*
    */__main__.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise NotImplementedError
    if __name__ == .__main__.:
    pass
    raise ImportError
    raise NotImplemented

[tool:pytest]
testpaths = tests
addopts = -v --cov=noocrush --cov-report=term-missing
python_files = test_*.py

[egg_info]
tag_build = 
tag_date = 0
